Implement thresholds and dimensions in report

--- a/web/modules/custom/ai_screening/ai_screening.links.menu.yml
+++ b/web/modules/custom/ai_screening/ai_screening.links.menu.yml
@@ -1,5 +1,5 @@
 # Setup default page
-ai_screening_reports.reports:
+ai_screening.site_setup:
   title: Site setup
   description: Show site setup
   menu_name: main
