Added once and drupal to library dependencies add role to users added to groups, changed frontpage stats block

--- a/web/themes/custom/itkdev/itkdev_base_theme/itkdev_base_theme.libraries.yml
+++ b/web/themes/custom/itkdev/itkdev_base_theme/itkdev_base_theme.libraries.yml
@@ -6,3 +6,6 @@ styles:
   js:
     build/app.js: { minified: true }
     build/runtime.js: { minified: true }
+  dependencies:
+    - core/drupal
+    - core/once
