--- a/web/modules/custom/ai_screening_reports/ai_screening_reports.routing.yml
+++ b/web/modules/custom/ai_screening_reports/ai_screening_reports.routing.yml
@@ -28,6 +28,7 @@ ai_screening_reports.project_track:
   requirements:
     _permission: 'access content'
   options:
+    no_cache: TRUE
     parameters:
       project_track_type:
         type: project_track_type
