Added option for multiple charts and added color boxes to charts

--- a/web/themes/custom/itkdev/itkdev_project_theme/package.json
+++ b/web/themes/custom/itkdev/itkdev_project_theme/package.json
@@ -2,7 +2,10 @@
   "license": "UNLICENSED",
   "private": true,
   "devDependencies": {
-    "choices.js": "^11.0.2",
-    "chart.js": "^4.4.6"
+    "chart.js": "^4.4.6",
+    "choices.js": "^11.0.2"
+  },
+  "dependencies": {
+    "chartjs-plugin-annotation": "^3.1.0"
   }
 }
