--- a/config/sync/views.view.front.yml
+++ b/config/sync/views.view.front.yml
@@ -183,14 +183,14 @@ display:
             suffix: ''
             target: ''
             nl2br: false
-            max_length: 0
-            word_boundary: false
-            ellipsis: false
+            max_length: 375
+            word_boundary: true
+            ellipsis: true
             more_link: false
             more_link_text: ''
             more_link_path: ''
             strip_tags: false
-            trim: false
+            trim: true
             preserve_tags: ''
             html: false
           element_type: ''
