--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -10,6 +10,8 @@ module:
   breakpoint: 0
   ckeditor5: 0
   config_ignore: 0
+  config_translation: 0
+  config_translation_po: 0
   contextual: 0
   core_event_dispatcher: 0
   custom_event_dispatcher: 0
