--- a/config/sync/field.field.node.project.field_project_state.yml
+++ b/config/sync/field.field.node.project.field_project_state.yml
@@ -11,7 +11,7 @@ id: node.project.field_project_state
 field_name: field_project_state
 entity_type: node
 bundle: project
-label: 'Project state'
+label: 'Projekt tilstand'
 description: ''
 required: false
 translatable: false
