3130: Added task to remove node_modules from build

--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -29,6 +29,7 @@ jobs:
       - name: Build theme assets
         run: |
           task theme-build
+          task theme-clean-up
 
       - name: Make assets dir
         run: |
