--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -104,6 +104,12 @@ tasks:
       - task compose -- run --rm node yarn --cwd /app/web/themes/custom/itkdev/itkdev_base_theme install
       - task compose -- run --rm node yarn --cwd /app/web/themes/custom/itkdev/itkdev_base_theme build
 
+  theme-clean-up:
+    desc: "Clean up theme building"
+    cmds:
+      - sudo chown -R $(id -u):$(id -g) web/themes/custom/itkdev/*/node_modules
+      - rm -rf web/themes/custom/itkdev/*/node_modules
+
   theme-watch:
     desc: "Build theme and watch for changes"
     cmds:
