--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -10,7 +10,7 @@ permissions:
 
 jobs:
   create-release:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     env:
       COMPOSER_ALLOW_SUPERUSER: 1
       APP_ENV: prod
@@ -20,6 +20,9 @@ jobs:
 
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
 
       - name: Composer install
         run: |
