Cleaned up by replacing text_format with webform_html_editor

--- a/config/sync/webform.settings.yml
+++ b/config/sync/webform.settings.yml
@@ -177,6 +177,7 @@ element:
     number: number
     password: password
     password_confirm: password_confirm
+    processed_text: processed_text
     radios: radios
     range: range
     search: search
@@ -184,6 +185,7 @@ element:
     table: table
     tableselect: tableselect
     tel: tel
+    text_format: text_format
     textarea: textarea
     textfield: textfield
     url: url
@@ -213,7 +215,6 @@ element:
     webform_likert: webform_likert
     webform_link: webform_link
     webform_mapping: webform_mapping
-    webform_markup: webform_markup
     webform_message: webform_message
     webform_more: webform_more
     webform_name: webform_name
