--- a/config/sync/editor.editor.simple_editor.yml
+++ b/config/sync/editor.editor.simple_editor.yml
@@ -12,13 +12,20 @@ settings:
   toolbar:
     items:
       - heading
+      - style
       - bold
       - italic
       - bulletedList
       - numberedList
       - link
       - blockQuote
+      - sourceEditing
+      - alignment
   plugins:
+    ckeditor5_alignment:
+      enabled_alignments:
+        - justify
+        - left
     ckeditor5_heading:
       enabled_headings:
         - heading2
@@ -29,5 +36,25 @@ settings:
         reversed: true
         startIndex: true
       multiBlock: true
+    ckeditor5_sourceEditing:
+      allowed_tags:
+        - '<div>'
+    ckeditor5_style:
+      styles:
+        -
+          label: Task
+          element: '<div class="task">'
+        -
+          label: Consideration
+          element: '<div class="consideration">'
+        -
+          label: Rule
+          element: '<div class="rule">'
+        -
+          label: 'Always show'
+          element: '<div class="always_show">'
+        -
+          label: 'Always hide'
+          element: '<div class="always_hide">'
 image_upload:
   status: false
