--- a/config/sync/webform.settings.yml
+++ b/config/sync/webform.settings.yml
@@ -238,7 +238,7 @@ element:
     webform_video_file: webform_video_file
 html_editor:
   disabled: false
-  element_format: webform_default
+  element_format: simple_editor
   mail_format: webform_default
   tidy: true
   make_unused_managed_files_temporary: true
