--- a/config/sync/webform.webform.complexity_uncertainty_default.yml
+++ b/config/sync/webform.webform.complexity_uncertainty_default.yml
@@ -1,5 +1,5 @@
 uuid: 67a72917-3288-4b27-b50f-043138f32ff2
-langcode: en
+langcode: da
 status: open
 dependencies: {  }
 weight: 0
@@ -195,7 +195,7 @@ settings:
   wizard_progress_states: false
   wizard_start_label: ''
   wizard_preview_link: false
-  wizard_confirmation: true
+  wizard_confirmation: false
   wizard_confirmation_label: ''
   wizard_auto_forward: true
   wizard_auto_forward_hide_next_button: false
