Added report type

--- a/config/sync/field.storage.taxonomy_term.field_report_type.yml
+++ b/config/sync/field.storage.taxonomy_term.field_report_type.yml
@@ -14,6 +14,9 @@ settings:
     -
       value: bubble_chart
       label: 'Bubble chart'
+    -
+      value: webform_submission
+      label: 'Webform submission'
   allowed_values_function: ''
 module: options
 locked: false
