--- a/config/sync/config_ignore.settings.yml
+++ b/config/sync/config_ignore.settings.yml
@@ -2,5 +2,6 @@ _core:
   default_config_hash: IgOVnECx6lbVt6JVFnadoEEugneDf3UblPZnOzov43Q
 mode: intermediate
 ignored_config_entities:
-  import: {  }
+  import:
+    - 'webform.webform.*'
   export: {  }
