--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,6 +1,9 @@
 on: pull_request
 name: Review
 
+env:
+  COMPOSE_USER: runner
+
 jobs:
   changelog:
     runs-on: ubuntu-latest
@@ -43,8 +46,8 @@ jobs:
       - uses: actions/checkout@v4
       - run: |
           docker network create frontend
-          docker compose run --user root --rm phpfpm composer install
-          docker compose run --user root --rm phpfpm composer normalize --dry-run
+          docker compose run --rm phpfpm composer install
+          docker compose run --rm phpfpm composer normalize --dry-run
 
   coding-standards-phpcs:
     name: coding-standards-check/phpcs
@@ -57,8 +60,8 @@ jobs:
       - uses: actions/checkout@v4
       - run: |
           docker network create frontend
-          docker compose run --user root --rm phpfpm composer install
-          docker compose run --user root --rm phpfpm composer coding-standards-check/phpcs
+          docker compose run --rm phpfpm composer install
+          docker compose run --rm phpfpm composer coding-standards-check/phpcs
 
   coding-standards-twig-cs-fixer:
     name: coding-standards-check/twig-cs-fixer
@@ -71,8 +74,8 @@ jobs:
       - uses: actions/checkout@v4
       - run: |
           docker network create frontend
-          docker compose run --user root --rm phpfpm composer install
-          docker compose run --user root --rm phpfpm composer coding-standards-check/twig-cs-fixer
+          docker compose run --rm phpfpm composer install
+          docker compose run --rm phpfpm composer coding-standards-check/twig-cs-fixer
 
   install-site:
     name: Check that site can be installed
@@ -87,19 +90,19 @@ jobs:
           docker compose up --detach
 
           # Important: Use --no-interaction to make https://getcomposer.org/doc/06-config.md#discard-changes have effect.
-          docker compose exec --user root phpfpm composer install --no-interaction
+          docker compose exec phpfpm composer install --no-interaction
 
       - name: Install site
         if: ${{ (hashFiles('config/sync/core.extension.yml') == '') && (hashFiles('web/sites/default/settings.local.php') != '') }}
         run: |
           # Install the site
-          docker compose exec --user root phpfpm vendor/bin/drush site:install minimal
+          docker compose exec phpfpm vendor/bin/drush site:install minimal
 
       - name: Install site from config
         if: ${{ hashFiles('config/sync/core.extension.yml') != '' }}
         run: |
           # Install the site from config
-          docker compose exec --user root phpfpm vendor/bin/drush site:install --existing-config --yes
+          docker compose exec phpfpm vendor/bin/drush site:install --existing-config --yes
 
       - name: Apply fixtures
         run: |
@@ -124,14 +127,14 @@ jobs:
           docker compose up --detach
 
           # Important: Use --no-interaction to make https://getcomposer.org/doc/06-config.md#discard-changes have effect.
-          docker compose exec --user root phpfpm composer install --no-interaction
+          docker compose exec phpfpm composer install --no-interaction
 
           # Install the site
-          docker compose exec --user root phpfpm vendor/bin/drush site:install --existing-config --yes
+          docker compose exec phpfpm vendor/bin/drush site:install --existing-config --yes
 
       - name: Export config
         if: ${{ (hashFiles('config/sync/core.extension.yml') != '') && (hashFiles('web/sites/default/settings.local.php') != '') }}
-        run: docker compose exec --user root phpfpm vendor/bin/drush config:export --yes
+        run: docker compose exec phpfpm vendor/bin/drush config:export --yes
       - name: Check for changes in config
         if: ${{ (hashFiles('config/sync/core.extension.yml') != '') && (hashFiles('web/sites/default/settings.local.php') != '') }}
         run: git diff --diff-filter=ACMRT --exit-code config/
@@ -193,11 +196,11 @@ jobs:
         run: |
           docker network create frontend
           docker compose up --detach
-          docker compose exec --user root phpfpm composer install
+          docker compose exec phpfpm composer install
 
       - name: Run module tests
         run: |
-          docker compose exec --user root phpfpm bash -c 'cd web && ../vendor/bin/phpunit --configuration ../phpunit.xml modules/custom'
+          docker compose exec phpfpm bash -c 'cd web && ../vendor/bin/phpunit --configuration ../phpunit.xml modules/custom'
 
   update-site:
     name: Check that site can be updated
@@ -215,16 +218,16 @@ jobs:
           docker compose up --detach
 
           # Important: Use --no-interaction to make https://getcomposer.org/doc/06-config.md#discard-changes have effect.
-          docker compose exec --user root phpfpm composer install --no-interaction
+          docker compose exec phpfpm composer install --no-interaction
 
       - name: Install site
         run: |
           # Install the site from config
-          docker compose exec --user root phpfpm vendor/bin/drush site:install --existing-config --yes
+          docker compose exec phpfpm vendor/bin/drush site:install --existing-config --yes
 
       - name: Clean up root stuff
         run: |
-          sudo chown -Rv $USER:$USER vendor/ web/ || true
+          # sudo chown -Rv $USER:$USER . || true
           sudo chmod -Rv a+w web/sites/default || true
 
       # Install site with our current ref
@@ -240,11 +243,11 @@ jobs:
           docker compose up --detach
 
           # Important: Use --no-interaction to make https://getcomposer.org/doc/06-config.md#discard-changes have effect.
-          docker compose exec --user root phpfpm composer install --no-interaction
+          docker compose exec phpfpm composer install --no-interaction
 
       - name: Update site
         run: |
-          docker compose exec --user root phpfpm vendor/bin/drush deploy --yes
+          docker compose exec phpfpm vendor/bin/drush deploy --yes
 
   composer-audit:
     name: Check that required packages are up to date
@@ -259,8 +262,8 @@ jobs:
           docker compose up --detach
 
           # Important: Use --no-interaction to make https://getcomposer.org/doc/06-config.md#discard-changes have effect.
-          docker compose exec --user root phpfpm composer install --no-interaction
+          docker compose exec phpfpm composer install --no-interaction
 
       - name: Run audit
         run: |
-          docker compose exec --user root phpfpm composer audit
+          docker compose exec phpfpm composer audit
