Added static page content type

--- a/web/modules/custom/ai_screening/ai_screening.routing.yml
+++ b/web/modules/custom/ai_screening/ai_screening.routing.yml
@@ -5,3 +5,11 @@ ai_screening.site_setup:
     _title: 'Site setup'
   requirements:
     _permission: 'access site setup'
+ai_screening.frontpage_settings:
+  path: '/site-setup/frontpage'
+  defaults:
+    _title: 'Frontpage settings'
+    _form: 'Drupal\ai_screening\Form\FrontpageForm'
+  requirements:
+    _permission: 'access site setup'
+
