--- a/config/sync/webform.settings.yml
+++ b/config/sync/webform.settings.yml
@@ -185,7 +185,6 @@ element:
     table: table
     tableselect: tableselect
     tel: tel
-    text_format: text_format
     textarea: textarea
     textfield: textfield
     url: url
@@ -245,7 +244,7 @@ html_editor:
 file:
   file_public: false
   file_private_redirect: true
-  file_private_redirect_message: 'Please log in to access the uploaded file.'
+  file_private_redirect_message: '<p>Please log in to access the uploaded file.</p>'
   default_max_filesize: ''
   default_managed_file_extensions: 'gif jpg jpeg png bmp eps tif pict psd txt rtf html odf pdf doc docx ppt pptx xls xlsx xml avi mov mp3 mp4 ogg wav bz2 dmg gz jar rar sit svg tar zip'
   default_image_file_extensions: 'gif jpg jpeg png'
