--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
         "drupal/better_exposed_filters": "^7.0",
         "drupal/config_ignore": "^3.3",
         "drupal/config_translation_po": "^1.0",
-        "drupal/core-composer-scaffold": "11.1.3",
-        "drupal/core-project-message": "11.1.3",
-        "drupal/core-recommended": "11.1.3",
+        "drupal/core-composer-scaffold": "^11.1",
+        "drupal/core-project-message": "^11.1",
+        "drupal/core-recommended": "^11.1",
         "drupal/field_group": "^3.6",
         "drupal/group": "^3.3",
         "drupal/hook_event_dispatcher": "^4.2",
