--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
     "require-dev": {
         "drupal/core-dev": "^11.0",
         "drupal/masquerade": "^2.0",
+        "drupal/potx": "^1.1",
         "drupal/webprofiler": "11.1.0",
         "ergebnis/composer-normalize": "^2.43",
         "mglaman/phpstan-drupal": "^1.1",
