--- a/task/Taskfile.translation.yml
+++ b/task/Taskfile.translation.yml
@@ -55,6 +55,7 @@ tasks:
       vars:
         - TRANSLATION_MODULES
         - TRANSLATION_THEMES
+        - TRANSLATION_LANGUAGES
 
   translations:extract:modules:
     cmds:
@@ -64,7 +65,7 @@ tasks:
             MODULE:
               ref: .TRANSLATION_MODULES
             LANGUAGE:
-              - da
+              ref: .TRANSLATION_LANGUAGES
         cmd: |
           export MODULE_PATH=$(task drush -- php:eval 'echo Drupal::service("extension.list.module")->getPath("{{.ITEM.MODULE}}")')
           if [ -n "#MODULE_PATH" ]; then
@@ -81,7 +82,7 @@ tasks:
             THEME:
               ref: .TRANSLATION_THEMES
             LANGUAGE:
-              - da
+              ref: .TRANSLATION_LANGUAGES
         # `drush potx` always writes to web/general.pot, so we move this file
         # into the desired destination in the `translations` folder inside the
         # module folder.
@@ -120,15 +121,19 @@ tasks:
 
   config-translations:export:
     cmds:
-      - task drush -- config_translation_po:export da > translations/config-translations.da.po
-      # Fix plurals spec in PO file
+      - for:
+          matrix:
+            LANGUAGE:
+              ref: .TRANSLATION_LANGUAGES
+        cmd: task drush -- config_translation_po:export {{.ITEM.LANGUAGE}} > config/translations.{{.ITEM.LANGUAGE}}.po
+      # Fix plurals spec in Danish PO file
       # https://drupalsun.com/eelke/2020/08/17/tale-mistranslated-plurals
       # https://www.drupal.org/project/drupal/issues/3496223
-      - 'task compose -- exec phpfpm sed -i "s/Plural-Forms: nplurals=2; plural=(n > 1);/Plural-Forms: nplurals=2; plural=(n != 1);/" translations/config-translations.da.po'
+      - 'task compose -- exec phpfpm sed -i "s/Plural-Forms: nplurals=2; plural=(n > 1);/Plural-Forms: nplurals=2; plural=(n != 1);/" config/translations.da.po'
     silent: true
 
   config-translations:import:
     cmds:
       # Note: We use an empty type to import as not-customized.
-      - task drush -- config_translation_po:import --type='' --override=not-customized da ../translations/config-translations.da.po
+      - task drush -- config_translation_po:import --type='' --override=not-customized da ../config/translations.da.po
     silent: true
