--- a/config/sync/webform.webform.ethics_default.yml
+++ b/config/sync/webform.webform.ethics_default.yml
@@ -19,7 +19,7 @@ elements: |-
     1_1_gennemsigtighed_i_anvendelsen_af_kunstig_intelligens:
       '#type': text_format
       '#title': '1.1 Gennemsigtighed i anvendelsen af kunstig intelligens'
-      '#help': '<p>Aarhus Kommune ønsker at gøre det tydeligt, hvis en kunstig intelligens har medvirket i bearbejdningen af borgernes data eller i udformningen af et svar til borgeren.</p><p>Er det sikret i udarbejdelsen af løsningen, at dette hensyn imødekommes? I svaret skal der redegøres for, om og hvordan dette hensyn imødekommes.</p>'
+      '#help': '<p>Aarhus Kommune ønsker at gøre det tydeligt, hvordan en kunstig intelligens har medvirket i bearbejdningen af borgernes data eller i udformningen af et svar til borgeren.</p><p>I svaret skal der redegøres for, om og hvordan dette hensyn imødekommes.</p>'
       '#help_display': element_before
       '#allowed_formats':
         simple_editor: simple_editor
@@ -32,7 +32,7 @@ elements: |-
     1_2_imoedegaaelse_af_risiko_for_diskrimination:
       '#type': text_format
       '#title': '1.2 Imødegåelse af risiko for diskrimination'
-      '#help': '<p>Kunstig intelligens bruger eksisterende data i udarbejdelse af svar og datagrundlag til medarbejderne. Hvis datagrundlaget ikke er velbeskrevet, stiger risikoen for bias i løsningen, hvilket blandt andet kan føre til diskrimination af borgere.</p><p><ul><li>Er data, som Ai-løsningen trænes på, repræsentative og fri for bias?</li><li>Er det i udarbejdelsen af AI-løsningen sikret, at data beskrives og fortolkes, så diskrimination ikke kan forekomme?</li><li>Er der overblik over andre mulige risici for diskrimination og bias?</li></ul></p><p>I svaret skal der redegøres for, om og hvordan løsningen forebygger muligheden for diskrimination.</p>'
+      '#help': '<p>Kunstig intelligens bruger eksisterende data i udarbejdelse af svar og datagrundlag til medarbejderne. Hvis datagrundlaget ikke er velbeskrevet, stiger risikoen for bias i løsningen, hvilket blandt andet kan føre til diskrimination af borgere.</p><p><ul><li>Er data, som Ai-løsningen trænes på, repræsentative og fri for bias?</li><li>Er det i udarbejdelsen af AI-løsningen sikret, at data beskrives og fortolkes, så diskrimination i videst muligt omfang kan udelukkes?</li><li>Er der overblik over andre mulige risici for diskrimination og bias?</li><li>Er der sikret et fagligt eftercheck af løsningens output, så bias og diskrimination modvirkes menneskelig kontrol?</li></ul></p><p>I svaret skal der redegøres for, om og hvordan løsningen forebygger muligheden for diskrimination.</p>'
       '#help_display': element_before
       '#allowed_formats':
         simple_editor: simple_editor
@@ -40,7 +40,7 @@ elements: |-
     evaluation_1_2:
       '#type': ai_screening_static_select
       '#title': Vurdering
-      '#help': '<p>En grøn markering betyder, at diskrimination kan udelukkes, eller at spørgsmålet ikke er relevant. En gul markering, at diskrimination forventes at kunne udelukkes, en rød markering, at det ikke på nuværende tidspunkt forventes at kunne udelukkes og/eller at der mangler det fornødne overblik over data.</p>'
+      '#help': '<p>En grøn markering betyder, at diskrimination kan i meget høj grad kan udelukkes, eller forebygges gennem menneskelig kontrol. En gul markering, at diskrimination forventes at kunne udelukkes eller forebygges, eller at spørgsmålet ikke er relevant, en rød markering, at det ikke på nuværende tidspunkt forventes at kunne udelukkes og/eller at der mangler det fornødne overblik over data.</p>'
       '#help_display': element_after
     1_3_mulighed_for_menneskelig_kontrol:
       '#type': text_format
@@ -53,11 +53,11 @@ elements: |-
     evaluation_1_3:
       '#type': ai_screening_static_select
       '#title': Vurdering
-      '#help': '<p>En grøn markering betyder, at borgeren har mulighed for at kontrollere såvel behandling som output, eller at spørgsmålet ikke er relevant. En gul markering betyder, at det forventes, at borgeren kan kontrollere såvel behandling som output, en rød markering betyder, at borgeren ikke på nuværende tidspunkt har mulighed for at kontrollere behandling eller output.</p>'
+      '#help': '<p>En grøn markering betyder, at borgeren har mulighed for at kontrollere såvel behandling som output. En gul markering betyder, at det forventes, at borgeren kan kontrollere såvel behandling som output, eller at spørgsmålet ikke er relevant, en rød markering betyder, at borgeren ikke på nuværende tidspunkt har mulighed for at kontrollere behandling eller output.</p>'
       '#help_display': element_after
-    1_4_ansvarliggoerelse:
+    1_4_ansvarlighed:
       '#type': text_format
-      '#title': '1.4 Ansvarliggørelse'
+      '#title': '1.4 Ansvarlighed'
       '#help': '<p>Borgerne skal have mulighed for at drage kommunen til ansvar for de beslutninger, der træffes og de svar, borgeren modtager. Der skal derfor altid være en tydelig afsender på AI-løsninger og mulighed for at gøre et ansvar gældende i forhold til konkrete personer og/eller afdelinger i kommunen. Dette indebærer også, at ansvarsforholdet er tydeliggjort internt i kommunen.</p><p>I svaret skal der redegøres for, om løsningen synliggør afsender- og ansvarsforhold i forhold til databehandlinger og svar, også internt.</p>'
       '#help_display': element_before
       '#allowed_formats':
@@ -66,7 +66,7 @@ elements: |-
     evaluation_1_4:
       '#type': ai_screening_static_select
       '#title': Vurdering
-      '#help': '<p>En grøn markering betyder, at borgeren har mulighed for at gøre et ansvarsforhold gældende i forhold til databehandling og/eller svar, eller at spørgsmålet ikke er relevant. En gul markering betyder, at det forventes, at borgeren vil kunne gøre et ansvarsforhold gældende, en rød markering betyder, at borgeren ikke på nuværende tidspunkt har mulighed for at gøre ansvarsforhold gældende.</p>'
+      '#help': '<p>En grøn markering betyder, at borgeren har mulighed for at gøre et ansvarsforhold gældende i forhold til databehandling og/eller svar En gul markering betyder, at det forventes, at borgeren vil kunne gøre et ansvarsforhold gældende, eller at spørgsmålet ikke er relevant. En rød markering betyder, at borgeren ikke på nuværende tidspunkt har mulighed for at gøre ansvarsforhold gældende.</p>'
       '#help_display': element_after
     1_5_digital_eksklusion_inklusion:
       '#type': text_format
@@ -79,7 +79,7 @@ elements: |-
     evaluation_1_5:
       '#type': ai_screening_static_select
       '#title': Vurdering
-      '#help': 'En grøn markering betyder, at det ikke forventes, at løsningen vil kunne øge den digitale eksklusion, eller at løsningen måske endda kan mindske eksklusion. Alternativt, at der er lagt planer for at forebygge digital eksklusion. Grønt kan også betyde, at spørgsmålet ikke er relevant. En gul markering betyder, at det forventes, at løsningen kan øge den digitale eksklusion, og at der ikke for nuværende er lagt planer for at modvirke dette. En rød markering betyder, at løsningen forventes at øge den digitale eksklusion, og at dette ikke kan eller vil blive modvirket.'
+      '#help': 'En grøn markering betyder, at det ikke forventes, at løsningen vil kunne øge den digitale eksklusion, eller at løsningen måske endda kan mindske eksklusion. Alternativt, at der er lagt planer for at forebygge digital eksklusion.  En gul markering betyder, at det forventes, at løsningen kan øge den digitale eksklusion, og at der ikke for nuværende er lagt planer for at modvirke dette. Gult kan også betyde, at spørgsmålet ikke er relevant. En rød markering betyder, at løsningen forventes at øge den digitale eksklusion, og at dette ikke kan eller vil blive modvirket.'
       '#help_display': element_after
   medarbejder_page:
     '#type': webform_wizard_page
@@ -95,7 +95,7 @@ elements: |-
     evaluation_2_1:
       '#type': ai_screening_static_select
       '#title': Vurdering
-      '#help': 'I svaret skal der redegøres for, om og hvordan træningsbehovet imødekommes. En grøn markering betyder, at træningsbehovet er fuldstændigt imødekommet, eller at spørgsmålet ikke er relevant. En gul markering, at træningsbehovet forventes at kunne imødekommes, f.eks. i forbindelse med implementering, en rød markering, at træningsbehovet ikke på nuværende tidspunkt forventes at kunne imødekommes.'
+      '#help': 'En grøn markering betyder, at træningsbehovet er fuldstændigt imødekommet, eller at spørgsmålet ikke er relevant. En gul markering, at træningsbehovet forventes at kunne imødekommes, f.eks. i forbindelse med implementering, en rød markering, at træningsbehovet ikke på nuværende tidspunkt forventes at kunne imødekommes.'
       '#help_display': element_after
     2_2_bortfald_af_opgaver:
       '#type': text_format
@@ -113,7 +113,7 @@ elements: |-
     2_3_medarbejderes_tilsyn_med_opgaveloesningen:
       '#type': text_format
       '#title': '2.3 Medarbejderes tilsyn med opgaveløsningen'
-      '#help': '<p>Da kommunen og / eller dens medarbejdere skal kunne drages til ansvar for databehandling og svar til borgere, skal det sikres at medarbejderne har mulighed for at føre tilsyn med AI-løsninger, så såvel databehandlinger som output løbende monitoreres, og medarbejderne har mulighed for at korrigere.</p><p>I svaret skal der redegøres for, om og i hvor høj grad, medarbejderne har mulighed for tilsyn med AI’ens opgaveløsning.</p>'
+      '#help': '<p>Da kommunen og / eller dens medarbejdere skal kunne drages til ansvar for databehandling og svar til borgere, skal det sikres at medarbejderne har mulighed for at føre tilsyn med AI-løsninger, så såvel databehandlinger som output løbende monitoreres, og medarbejderne har mulighed for at korrigere.</p><p>I svaret skal der redegøres for, hvordan, medarbejderne har mulighed for tilsyn med AI’ens opgaveløsning.</p>'
       '#help_display': element_before
       '#allowed_formats':
         simple_editor: simple_editor
@@ -121,7 +121,7 @@ elements: |-
     evaluation_2_3:
       '#type': ai_screening_static_select
       '#title': Vurdering
-      '#help': 'En grøn markering betyder, at medarbejderne har mulighed for fuldt tilsyn og indgriben ved fejl, eller at spørgsmålet ikke er relevant. En gul markering, at mulighed for fuldt tilsyn og indgriben forventes at kunne udarbejdes, en rød markering, at muligheden ikke på nuværende tidspunkt forventes at kunne etableres.'
+      '#help': 'En grøn markering betyder, at der er tryghed ved medarbejdernes  mulighed  tilsyn og indgriben ved fejl En gul markering, at mulighed for fuldt tilsyn og indgriben forventes at kunne udarbejdes, eller at spørgsmålet ikke er relevant. en rød markering, at muligheden ikke på nuværende tidspunkt forventes at kunne etableres.'
       '#help_display': element_after
     2_4_dekvalificering:
       '#type': text_format
@@ -134,7 +134,7 @@ elements: |-
     evaluation_2_4:
       '#type': ai_screening_static_select
       '#title': Vurdering
-      '#help': 'En grøn markering betyder, at risikoen for dekvalificering er kortlagt, og at der er lagt planer for forebyggelse på såvel kort som mellemlangt sigt, eller at spørgsmålet ikke er relevant. En gul markering betyder, at risikoen for dekvalificering ikke er kortlagt og/eller at der ikke er lagt planer for forebyggelse på nuværende tidspunkt. En rød markering betyder, at det ikke forventes, at en sådan kortlægning kan foretages, eller at det ikke er muligt at forebygge dekvalificering på kort eller langt sigt.'
+      '#help': 'En grøn markering betyder, at risikoen for dekvalificering er kortlagt, og at der er lagt planer for forebyggelse på såvel kort som mellemlangt sigt. En gul markering betyder, at risikoen for dekvalificering ikke er kortlagt og/eller at der ikke er lagt planer for forebyggelse på nuværende tidspunkt, eller at spørgsmålet ikke er relevant. En rød markering betyder, at det ikke forventes, at en sådan kortlægning kan foretages, eller at det ikke er muligt at forebygge dekvalificering på kort eller langt sigt.'
       '#help_display': element_after
   kommune_og_samfund_page:
     '#type': webform_wizard_page
@@ -142,7 +142,7 @@ elements: |-
     3_1_ressourceforbrug:
       '#type': text_format
       '#title': '3.1 Ressourceforbrug'
-      '#help': '<p>AI-løsninger bruger strøm, ikke mindst under træning, og vand til køling. Det er derfor vigtigt, at løsningernes ressourceforbrug står mål med de forventede udbytter, og at løsningerne i øvrigt er tilrettelagt ud fra en ressourceoptimerende tilgang (eks. krav til grøn strøm og genanvendelse af varmeudledning).</p><p>I svaret skal der redegøres for, hvordan det er søgt at kortlægge løsningens samlede ressourceanvendelse, og at denne anvendelse vurderes at stå i et rimeligt formål til udbyttet ved anvendelse af løsningen. Der skal endvidere redegøres for, om hvordan det er søgt at anvende en ressourceoptimerende tilgang.</p>'
+      '#help': '<p>AI-løsninger bruger strøm, ikke mindst under træning, og vand til køling. Det er derfor vigtigt, at løsningernes ressourceforbrug står mål med de forventede udbytter, og at løsningerne i øvrigt er tilrettelagt ud fra en ressourceoptimerende tilgang (eks. krav til grøn strøm og genanvendelse af varmeudledning).</p><p>I svaret skal der redegøres for, om det er overvejet at anvende mindre ressourcekrævende løsinger end AI til indfrielse af projektets formål.</p>'
       '#help_display': element_before
       '#allowed_formats':
         simple_editor: simple_editor
@@ -150,12 +150,12 @@ elements: |-
     evaluation_3_1:
       '#type': ai_screening_static_select
       '#title': Vurdering
-      '#help': 'En grøn markering betyder, at ressourceanvendelsen er søgt kortlagt, og at den står i et rimeligt forhold til udbytte ved anvendelse. Grøn kan også betyde, at det ikke har været muligt at foretage en sådan kortlægning, men at det antages, at energiforbruget har et rimeligt forhold til udbytte. En gul markering betyder, at ressourceanvendelsen endnu ikke er kortlagt, og/eller at der endnu ikke er taget stilling til det rimelige forhold mellem ressourceanvendelse og løsningsudbytte. En rød markering betyder, at detantages eller er påvist, at der ikke forventes, et rimeligt forhold mellem ressourceanvendelse og løsningsudbytte.'
+      '#help': 'En grøn markering betyder, at der er afsøgt muligheder for anvendelse af mindre ressourcekrævende teknologier, men at dette ikke har været muligt af finde. En gul markering betyder, at kortlægningen af muligt anvendelse af mindre ressourcekrævende teknologier er påtænkt, men ikke udført. Gul kan også betyde, at spørgsmålet ikke er relevant. En rød markering betyder, at det ikke påtænkes at gennemføre en analyse af alternative muligheder.'
       '#help_display': element_after
     3_2_betydning_for_omverdenens_opfattelse_af_aarhus_kommune:
       '#type': text_format
       '#title': '3.2 Betydning for omverdenens opfattelse af Aarhus Kommune'
-      '#help': '<p>Formålet med at introducere AI i den kommunale opgaveløsning kan være bedring af arbejdsmiljø, bedre borgerservice, frigørelse af tid, stærkere lovmedholdelighed og øget kvalitet. Ofte vil løsningerne medvirke til indfrielse af kombinationer af disse mål. I nogle tilfælde kan der dog være en risiko for, at målene modarbejder hinanden, eller at borgere og virksomheder oplever, at en AI-løsning kan distancere dem fra kommunen.</p><p>Det er derfor vigtigt at vurdere, hvorvidt indførelsen af en given AI-løsning kan medføre, at Aarhus Kommunes omdømme påvirkes negativt, og om denne effekt kan modvirkes.</p>'
+      '#help': '<p>I nogle tilfælde kan introduktionen af en AI-løsning betyde, at borgere og virksomheder oplever, at de føler sig distancerede fra kommunen, der kan opfattes som for teknokratisk orienteret.</p><p>Det er derfor vigtigt at vurdere, hvorvidt indførelsen af en given AI-løsning kan medføre, at Aarhus Kommunes omdømme påvirkes negativt, og om denne effekt kan modvirkes.</p>'
       '#help_display': element_before
       '#allowed_formats':
         simple_editor: simple_editor
@@ -163,7 +163,33 @@ elements: |-
     evaluation_3_2:
       '#type': ai_screening_static_select
       '#title': Vurdering
-      '#help': 'En grøn markering betyder, at effekten af løsningens indførelse på kommunens omdømme vurderes at være neutralt eller positivt, alternativt at der lagt (kommunikations) planer for at imødegå denne effekt. Grøn kan også betyde, at spørgsmålet ikke er relevant. En gul markering betyder, at omdømmepåvirkningen endnu ikke er kortlagt, og/eller at der endnu ikke er lagt planer for at modvirke omdømmepåvirkningen. En rød markering betyder, at omdømmepåvirkningen kan vurderes, eller at der ikke kan kompenseres for evt. negativ omdømmepåvirkning.'
+      '#help': 'En grøn markering betyder, at effekten af løsningens indførelse på kommunens relation til borgerne vurderes at være neutralt eller positivt.  En gul markering betyder, at omdømmepåvirkningen endnu ikke er kortlagt, og/eller at der endnu ikke er lagt planer for at modvirke omdømmepåvirkningen. Gul kan også betyde, at spørgsmålet ikke er relevant. En rød markering betyder, at omdømmepåvirkningen vurderes at være stærkt negativ.'
+      '#help_display': element_after
+    3_3_modstridende_maalsaetninger:
+      '#type': text_format
+      '#title': '3.3 Modstridende målsætninger'
+      '#help': '<p>Formålet med at introducere AI i den kommunale opgaveløsning kan være bedring af arbejdsmiljø, bedre borgerservice, frigørelse af tid, stærkere lovmedholdelighed og øget kvalitet.</p><p>Ofte vil løsningerne medvirke til indfrielse af kombinationer af disse mål. I nogle tilfælde kan der dog være en risiko for, at målene modarbejder hinanden. Det er derfor vigtigt at vurdere den samlede effekt af en AI-løsning på tværs af målsætningerne for dens indførelse.</p>'
+      '#help_display': element_before
+      '#allowed_formats':
+        simple_editor: simple_editor
+      '#hide_help': true
+    evaluation_3_3:
+      '#type': ai_screening_static_select
+      '#title': Vurdering
+      '#help': 'En grøn markering betyder, at der ikke er et konfliktende målhierarki forbundet med løsningen. En gul markering betyder, at der kan være konfliktende mål, men at dette vurrderes at have et begrænset omfang. Gul kan også betyde, at spørgsmålet ikke er relevant. En rød markering betyder, at der er stærk konflikt mellem målsætninger, og at ledelse og / eller det politiske niveau skal konsulteres for at sætte retning.'
+      '#help_display': element_after
+    3_4_overordnet_etisk_vurdering:
+      '#type': text_format
+      '#title': '3.4 Overordnet etisk vurdering'
+      '#help': '<p>AI-løsninger kan bidrage til at påvirke fundamentale samfundsudfordringer, eks. (digital) eksklusion, klimaforandringer, dyrevelfærd, demokratisk deltagelse, mistrivsel mv. I nogle tilfælde er denne påvirkning positiv, i andre negativ.</p>'
+      '#help_display': element_before
+      '#allowed_formats':
+        simple_editor: simple_editor
+      '#hide_help': true
+    evaluation_3_4:
+      '#type': ai_screening_static_select
+      '#title': Vurdering
+      '#help': 'En grøn markering betyder, at løsningen vurderes at bidrage positivt i forhold til en eller flere fundamentale samfundsudfordringer. En gul markering betyder, at løsningen hverken påvirker positivt eller negativt, eller at spørgsmålet ikke er relevant. En rød markering betyder, at løsningen vurderes at bidrage negativt til en eller flere fundamentale samfundsudfordringer.'
       '#help_display': element_after
 css: ''
 javascript: ''
